po: update po/de_DE/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-components.po
+++ b/po/de_DE/common-components.po
@@ -20,13 +20,14 @@
 # heliogabal <rhalbmann@gmail.com>, 2014
 # Fabian <schuttenberg@systopia.de>, 2013
 # Fabian <schuttenberg@systopia.de>, 2013
+# Thomas Schuettler <tschuettler@oxfam.de>, 2016
 # Yvonne <yvonne.sedlatschek@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-17 10:41+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-07-12 15:48+0000\n"
+"Last-Translator: Thomas Schuettler <tschuettler@oxfam.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -228,7 +229,7 @@ msgstr "Herunterladen"
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Nachrichtenvorlage"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -269,12 +270,12 @@ msgstr "Konfigurieren"
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About"
-msgstr ""
+msgstr "Über"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html ang/crmCaseType/edit.html
 msgid "Advanced"
-msgstr ""
+msgstr "Fortgeschritten"
 
 #: templates/CRM/Admin/Form/LocationType.tpl
 #: templates/CRM/Admin/Form/OptionGroup.tpl
@@ -333,7 +334,7 @@ msgstr "Ist aktiv?"
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 #: ang/crmCaseType/activitySetDetails.html
 msgid "Workflow"
-msgstr ""
+msgstr "Workflow"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 #: CRM/Financial/Form/FinancialType.php
@@ -342,7 +343,7 @@ msgstr "Löschen nicht möglich"
 
 #: templates/CRM/Admin/Page/Options.hlp ang/crmCaseType/edit.html
 msgid "Activity Types"
-msgstr ""
+msgstr "Aktivitätstypen"
 
 #: templates/CRM/Admin/Page/Options.tpl templates/CRM/Report/Page/Options.tpl
 msgid ""
@@ -406,7 +407,7 @@ msgstr "Batch Name"
 
 #: CRM/Batch/DAO/Batch.php CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Batch Title"
-msgstr ""
+msgstr "Batch-Titel"
 
 #: CRM/Batch/Form/Batch.php CRM/Financial/Form/Search.php
 msgid "Number of Items"
@@ -499,7 +500,7 @@ msgstr "Titel des Berichts"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php ang/crmMailingAB/ListCtrl.html
 msgid "Results"
-msgstr ""
+msgstr "Ergebnisse"
 
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 #: CRM/Event/Form/ManageEvent.php
@@ -552,7 +553,7 @@ msgstr "Falls Sie in einem Datums- oder Betrags-Bereich suchen, versuchen Sie di
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
@@ -718,7 +719,7 @@ msgstr "Zeiteinheit der Zahlungshäufigkeit"
 
 #: CRM/Contribute/DAO/ContributionRecur.php CRM/Financial/DAO/PaymentToken.php
 msgid "Payment Token ID"
-msgstr ""
+msgstr "Zahlungs-Token-ID"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Report/Form/Contribute/Recur.php
@@ -807,7 +808,7 @@ msgstr "Zahlung ansehen"
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Credit Card Information"
-msgstr ""
+msgstr "Kreditkarteninformation"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
@@ -1090,7 +1091,7 @@ msgstr "Geschuldetes Guthaben"
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "loading"
-msgstr ""
+msgstr "lade"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -1992,7 +1993,7 @@ msgstr "Wählen Sie die passende Zuwendungsart für diese Zahlung."
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Template"
-msgstr ""
+msgstr "Vorlage"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl templates/CRM/PCP/Page/PCP.tpl
@@ -2133,12 +2134,12 @@ msgstr "Mailingstatus"
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 #: ang/crmMailingAB/EditCtrl/report.html CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Opt-out"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid "Approval"
-msgstr ""
+msgstr "Zustimmung"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Clicks.php
 #: CRM/Report/Form/Mailing/Summary.php
@@ -2222,42 +2223,42 @@ msgstr "Fälliger Betrag"
 #: CRM/Contribute/Form/UpdateSubscription.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Number of Installments"
-msgstr ""
+msgstr "Anzahl der Raten"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Payment Method is a required field."
-msgstr ""
+msgstr "'Zahlungsmethode' ist ein Pflichtfeld."
 
 #: CRM/Contribute/Form/Contribution.php CRM/Member/Form/Membership.php
 msgid "You do not have all the permissions needed for this page."
-msgstr ""
+msgstr "Sie haben nicht alle notwendigen Rechte für diese Seite."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
 msgid "Update multiple records error"
-msgstr ""
+msgstr "Fehler bei der Aktualisierung von Mehrfacheinträgen"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Installment Amount"
-msgstr ""
+msgstr "Ratenbetrag"
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Notification Email"
-msgstr ""
+msgstr "Benachrichtigungsmail"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Median"
-msgstr ""
+msgstr "Median"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Mode"
-msgstr ""
+msgstr "Modalwert"
 
 #: CRM/Event/Form/ManageEvent/TabHeader.php CRM/Event/Page/ManageEvent.php
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
@@ -2265,24 +2266,24 @@ msgstr ""
 #: templates/CRM/Event/Form/ParticipantView.tpl
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Fees"
-msgstr ""
+msgstr "Gebühren"
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
 msgid "-select-"
-msgstr ""
+msgstr "-auswählen-"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing ID"
-msgstr ""
+msgstr "Newsletter Nr."
 
 #: CRM/Mailing/Selector/Browse.php CRM/Report/Form/Contribute/RecurSummary.php
 msgid "Started"
-msgstr ""
+msgstr "Begonnen"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Opens"
-msgstr ""
+msgstr "Individuelle Öffnungen"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Total Opens"
-msgstr ""
+msgstr "Gesamtzahl Öffnungen"
