--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -13,13 +13,14 @@
 # rmps <rmpsante@gmail.com>, 2014
 # samuelsov <samuel@koumbit.org>, 2015
 # samuelsov <samuel@koumbit.org>, 2011-2012
+# Stéphane Lussier <stephane@symbiotic.coop>, 2016
 # Julien Larocque-Dupont <transifex@s.quebec-hebergement.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 16:16+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-13 17:41+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -98,7 +99,7 @@ msgstr "Option sélectionnée"
 msgid ""
 "The contribution type criteria is now obsolete, please update your smart "
 "group"
-msgstr "Les critères de type de contribution est désormais obsolète, merci de mettre à jour votre groupe intelligent"
+msgstr "Les critères de type de contribution est désormais obsolète, merci de mettre à jour votre groupe dynamique"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Thank-you Sent"
