--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-07 14:00+0000\n"
+"PO-Revision-Date: 2016-07-13 17:45+0000\n"
 "Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -731,7 +731,7 @@ msgstr "Affichage de contacts"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Viewing Smart Groups"
-msgstr "Visualisation des groupes intelligents"
+msgstr "Visualisation des groupes dynamique"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Editing Contacts"
