po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -40,7 +40,7 @@
 # Fabian <schuttenberg@systopia.de>, 2013
 # Fabian <schuttenberg@systopia.de>, 2013
 # itsiwin <steveborrmann@gmx.de>, 2011
-# Thomas Schuettler <tschuettler@oxfam.de>, 2016
+# Thomas Schuettler, 2016
 # udavid <uwe.david@scandio.de>, 2012
 # udavid <uwe.david@scandio.de>, 2012
 # Yvonne <yvonne.sedlatschek@gmail.com>, 2015
@@ -48,8 +48,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-12 15:28+0000\n"
-"Last-Translator: Thomas Schuettler <tschuettler@oxfam.de>\n"
+"PO-Revision-Date: 2016-07-13 13:38+0000\n"
+"Last-Translator: Thomas Schuettler\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3662,7 +3662,7 @@ msgstr "Benutzerdefinierte Felder"
 #: CRM/Contact/Form/Search/Basic.php CRM/Contact/Form/Search/Custom/Basic.php
 #: CRM/Contact/Form/Search/Custom/MultipleValues.php
 msgid "- any contact type -"
-msgstr "- alle Kontaktarten -"
+msgstr "- beliebige Kontaktart -"
 
 #: CRM/Contact/Form/Search/Basic.php
 msgid "is..."
@@ -3672,7 +3672,7 @@ msgstr "ist..."
 #: CRM/Contact/Form/Search/Custom/MultipleValues.php
 #: CRM/Contact/Form/Search/Custom/Proximity.php
 msgid "- any group -"
-msgstr "- alle Gruppen -"
+msgstr "- beliebige Gruppe -"
 
 #: CRM/Contact/Form/Search/Basic.php
 msgid "with"
@@ -3887,7 +3887,7 @@ msgstr "Beziehungsstatus"
 #: CRM/Contact/Form/Search/Criteria.php CRM/Core/BAO/CustomField.php
 #: CRM/Custom/Page/Group.php
 msgid "Any"
-msgstr "Alle"
+msgstr "Eins"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Permissioned Relationship?"
@@ -24833,7 +24833,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php CRM/Contact/Task.php
 msgid "Print selected rows"
-msgstr ""
+msgstr "Markierte Zeilen drucken"
 
 #: CRM/Activity/Task.php
 msgid "Export activities"
@@ -24977,7 +24977,7 @@ msgstr ""
 #: CRM/Contact/Form/Task/Batch.php CRM/Contact/Form/Task/PickProfile.php
 #: CRM/Contact/Task.php
 msgid "Update multiple contacts"
-msgstr ""
+msgstr "mehrere Kontakte aktualisieren"
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid ""
