po: update po/fr_CA/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/report.po
+++ b/po/fr_CA/report.po
@@ -10,12 +10,13 @@
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012
 # Stéphane Lussier <stephane@koumbit.org>, 2011
+# Stéphane Lussier <stephane@symbiotic.coop>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 16:17+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-13 17:56+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -735,7 +736,7 @@ msgstr "Date de fin calculée (soit la date de fin ou la date à laquelle tous l
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Addressee Name"
-msgstr "Nom destinataire"
+msgstr "Nom du destinataire"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Percentage Change"
