--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-16 02:25+0000\n"
+"PO-Revision-Date: 2016-07-13 17:45+0000\n"
 "Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -863,7 +863,7 @@ msgstr "Groupes"
 
 msgctxt "menu"
 msgid "Smart Groups"
-msgstr "Groupes intelligents"
+msgstr "Groupes dynamiques"
 
 msgctxt "menu"
 msgid "Sunlight"
