po: update po/fr_CA/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/mailing.po
+++ b/po/fr_CA/mailing.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-07 14:04+0000\n"
-"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
+"PO-Revision-Date: 2016-07-13 18:00+0000\n"
+"Last-Translator: samuelsov <samuel@koumbit.org>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1181,7 +1181,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
-msgstr ""
+msgstr "Aucun contenu à prévisualiser"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
@@ -1233,7 +1233,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
-msgstr ""
+msgstr "Aperçu de la liste de destinataires"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
@@ -1423,7 +1423,7 @@ msgstr "Création de l'aperçu..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
-msgstr ""
+msgstr "Aperçu (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
@@ -1485,7 +1485,7 @@ msgstr ""
 msgid ""
 "Based on current data, approximately %1 contacts will receive a copy of the "
 "mailing."
-msgstr ""
+msgstr "Selon les données actuelles, approximativement %1 contacts recevront une copie de cet envoi."
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid "Below is a sample of the first %1 recipients."
@@ -1495,7 +1495,7 @@ msgstr ""
 msgid ""
 "If individual contacts are separately modified, added, or removed, then the "
 "final list may change."
-msgstr ""
+msgstr "Si des contacts sont modifiés, créés, ajoutés ou retirés du groupe avant le démarrage de l'envoi, alors la liste finale sera mise à jour en conséquence."
 
 #: ang/crmMailing/RadioDate.js
 msgid "The scheduled date and time is in the past"
