--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-05 01:36+0000\n"
+"PO-Revision-Date: 2016-07-13 23:39+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -20344,7 +20344,7 @@ msgstr "Naam/e-mail"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Restore CiviCRM Menu"
-msgstr "CiviCRM Menu herstellen"
+msgstr "CiviCRM-menu herstellen"
 
 #: templates/CRM/common/notifications.tpl
 msgid "close"
