--- a/po/pl_PL/pcp.po
+++ b/po/pl_PL/pcp.po
@@ -5,14 +5,15 @@
 # Translators:
 # Dariusz Koryto <nowydako@gmail.com>, 2012
 # njakub <fiilozof@gmail.com>, 2014
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Sergey <kovalski1601@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-13 23:58+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +39,7 @@ msgstr "Powiadom znajomych"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "URL for this Page"
-msgstr ""
+msgstr "Adres URL strony domowej"
 
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
@@ -219,7 +220,7 @@ msgstr "Edytuj stronę swojej kampanii"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
-msgstr ""
+msgstr "Witamy"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -227,7 +228,7 @@ msgstr "Twój cel"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value"
-msgstr ""
+msgstr "Całkowita kwota deklarowanych wpłat powinna być liczbą"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Join Us"
@@ -235,7 +236,7 @@ msgstr "Dołącz do nas"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Sign up Button"
-msgstr ""
+msgstr "Przycisk zarejestruj się"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Donate Now"
@@ -255,7 +256,7 @@ msgstr "Rola honorowa"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Notify me via email when someone donates to my page"
-msgstr ""
+msgstr "Powiadom mnie email, gdy ktoś przekaże darowiznę z mojej strony."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
@@ -347,7 +348,7 @@ msgstr ""
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Deleted"
-msgstr ""
+msgstr "Strona usunięta"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been disabled."
@@ -367,7 +368,7 @@ msgstr ""
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
-msgstr ""
+msgstr "Źródło"
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
@@ -388,11 +389,11 @@ msgstr ""
 
 #: CRM/PCP/Page/PCP.php
 msgid "Are you sure you want to delete this Campaign Page ?"
-msgstr ""
+msgstr "Czy jesteś pewien, że chcesz usunąć tę stronę kampanii?"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Edit Personal Campaign Page"
-msgstr ""
+msgstr "Edytuj stronę kampanii osobistej."
 
 #: CRM/PCP/Page/PCP.php
 msgid "Approve"
@@ -400,7 +401,7 @@ msgstr "Zatwierdzić"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Approve Personal Campaign Page"
-msgstr ""
+msgstr "Zatwierdź stronę kampanii osobistej."
 
 #: CRM/PCP/Page/PCP.php
 msgid "Reject"
@@ -408,15 +409,15 @@ msgstr "Odrzucać"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Reject Personal Campaign Page"
-msgstr ""
+msgstr "Odrzuć stronę kampanii osobistej"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Delete Personal Campaign Page"
-msgstr ""
+msgstr "Usuń stronę kampanii osobistej."
 
 #: CRM/PCP/Page/PCP.php
 msgid "Search Campaign Pages"
-msgstr ""
+msgstr "Szukaj strony kampanii"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "The personal campaign page you requested is currently unavailable."
