--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -48,7 +48,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-13 13:38+0000\n"
+"PO-Revision-Date: 2016-07-14 07:47+0000\n"
 "Last-Translator: Thomas Schuettler\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -3887,7 +3887,7 @@ msgstr "Beziehungsstatus"
 #: CRM/Contact/Form/Search/Criteria.php CRM/Core/BAO/CustomField.php
 #: CRM/Custom/Page/Group.php
 msgid "Any"
-msgstr "Eins"
+msgstr "Beliebig"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Permissioned Relationship?"
