po: update po/pl_PL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/menu.po
+++ b/po/pl_PL/menu.po
@@ -26,7 +26,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-14 00:04+0000\n"
+"PO-Revision-Date: 2016-07-15 22:18+0000\n"
 "Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -2172,15 +2172,15 @@ msgstr "Metody płatności"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Konfiguracja CKEditor"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Rozpocznij scalanie zduplikowanych kontaktów"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "Umieszczanie treści CiviCRM"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
@@ -2188,12 +2188,12 @@ msgstr "Aktualizacja rejestracji samoobsługowej"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "Transfer rejestracji samoobsługowej"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "Status systemu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2208,17 +2208,17 @@ msgstr "Rozszerzenia"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Detale aktywności"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Podsumowanie aktywności"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Pokazuje statystyki aktywności według typu/daty"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
