--- a/po/pl_PL/common-base.po
+++ b/po/pl_PL/common-base.po
@@ -7,6 +7,7 @@
 # njakub <fiilozof@gmail.com>, 2014
 # igorczajka <igor@czajka.art.pl>, 2014
 # kalor <karol.krzyczkowski@gmail.com>, 2014-2015
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2012-2014
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-16 21:51+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -751,7 +752,7 @@ msgstr "Temat"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity is a Test?"
-msgstr ""
+msgstr "Aktywność testowa?"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Survey / Petition"
@@ -797,7 +798,7 @@ msgstr ""
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Phone (called) Number"
-msgstr ""
+msgstr "N"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Form/Activity.php
 #: CRM/Contact/Form/Search/Custom/ActivitySearch.php
