--- a/po/pl_PL/financial.po
+++ b/po/pl_PL/financial.po
@@ -5,6 +5,7 @@
 # Translators:
 # Czauderna Tomasz <tczaude@gmail.com>, 2013
 # Gimbus <maciek.dabrowski@wspolpracownia.pl>, 2013
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2013
 # mrt, 2013
 # Sergey <kovalski1601@gmail.com>, 2015
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-16 21:56+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,19 +28,19 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "Utworzony przez:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "Data utworzenia:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr ""
+msgstr "Ostatnio zmodyfikowany przez:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "Rodzaj płatności"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
