--- a/po/pl_PL/install.po
+++ b/po/pl_PL/install.po
@@ -7,6 +7,7 @@
 # Dariusz Bukowski <bukowski@poczta.onet.pl>, 2014
 # Dariusz Koryto <nowydako@gmail.com>, 2015
 # kalor <karol.krzyczkowski@gmail.com>, 2015
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2016
 # Sergey <kovalski1601@gmail.com>, 2015
 # Wiktor Jezioro <wikjezioro@op.pl>, 2015
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 16:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-16 21:55+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -74,7 +75,7 @@ msgstr ""
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
-msgstr ""
+msgstr "Instalator może być używany tylko dla wersji WordPress z CiviCRM."
 
 #: install/index.php
 msgid "PHP Configuration"
@@ -114,7 +115,7 @@ msgstr "MySQL w wersji co najmniej %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr ""
+msgstr "Wymagana wersja MySQL to %1 lub wyższa. Twoja to %2."
 
 #: install/index.php
 msgid "MySQL %1"
@@ -305,11 +306,11 @@ msgstr ""
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "Plik '%1' nie został znaleziony"
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "Plik '%1' znaleziony"
 
 #: install/index.php
 msgid ""
@@ -329,7 +330,7 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "Serwer MySQL nie wspiera InnoDB."
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
