--- a/po/pl_PL/mailing.po
+++ b/po/pl_PL/mailing.po
@@ -6,6 +6,7 @@
 # Radek <d.exax@hotmail.com>, 2012
 # Karolina Pomarańska <karolina@caltha.pl>, 2015
 # kalor <karol.krzyczkowski@gmail.com>, 2015
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2013-2015
 # Radek <d.exax@hotmail.com>, 2012
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-16 21:51+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,11 +35,11 @@ msgstr "CiviMail nie wyśle wysyłki z pusta treścią, Omijam: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
-msgstr ""
+msgstr "Pole \"%1\" jest wymagane."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
-msgstr ""
+msgstr "Pole \"body_html\" lub \"body_text\" jest wymagane."
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/Form/Upload.php
 msgid "This message is missing a required token - {%1}: %2"
@@ -192,7 +193,7 @@ msgstr ""
 #: CRM/Mailing/DAO/Component.php CRM/Mailing/DAO/Mailing.php
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body Text"
-msgstr ""
+msgstr "Tekst Body"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
@@ -366,19 +367,19 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created By"
-msgstr ""
+msgstr "Test AB stworzony przez"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created Date"
-msgstr ""
+msgstr "Test AB stworzony dnia"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group ID"
-msgstr ""
+msgstr "ID grupy mailingowej"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Type"
-msgstr ""
+msgstr "Typ grupy mailingowej"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Entity Table"
