--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-06 13:45+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-07-19 22:46+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15854,7 +15854,7 @@ msgstr "¿Esteu segur que voleu restaurar els contactes seleccionats? Els contac
 
 #: templates/CRM/Contact/Form/Task/Delete.tpl
 msgid "Are you sure you want to delete the selected contact(s)?"
-msgstr "Esteu segur que voleu eliminar tots els contactes seleccionat(s)?"
+msgstr "Esteu segur que voleu eliminar tots els contactes seleccionats?"
 
 #: templates/CRM/Contact/Form/Task/Delete.tpl
 msgid ""
