--- a/po/it_IT/contribute.po
+++ b/po/it_IT/contribute.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Angela Iussig <angela.iussig@gmail.com>, 2016
 # Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Leonardo Armando Iarrusso <loppo9@hotmail.com>, 2013
 # Pietro De Nicolao <powerpdn@gmail.com>, 2013
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-20 06:47+0000\n"
-"Last-Translator: Samuele Masetto <samuele.masetto@perora.it>\n"
+"PO-Revision-Date: 2016-07-21 08:08+0000\n"
+"Last-Translator: Angela Iussig <angela.iussig@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2574,7 +2575,7 @@ msgstr "rate."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Your recurring contribution will be processed automatically."
-msgstr ""
+msgstr "Il tuo contributo ricorrente sarà elaborato automaticamente."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid ""
