--- a/po/ru_RU/drupal-civicrm.po
+++ b/po/ru_RU/drupal-civicrm.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-06 14:45+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-21 11:14+0000\n"
+"Last-Translator: Фёдор Ходьков <fkhodkov@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -299,7 +299,7 @@ msgstr "Почтовый адрес"
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
 msgid "State/Province"
-msgstr "Область/Регион"
+msgstr "Регион"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
@@ -890,7 +890,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The State or Province of the Address"
-msgstr "Область или штат адреса"
+msgstr "Регион адреса"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "ZIP / Postal Code"
