--- a/po/es_ES/common-components.po
+++ b/po/es_ES/common-components.po
@@ -21,7 +21,7 @@
 # jvalero <juan@jvalero.org>, 2011
 # jvalero <juan@jvalero.org>, 2011
 # carmyman <manuel.rubio.p@gmail.com>, 2013
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 # Fernando <badeaselche@hotmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Veruska Perinotto <reaching.out@gmail.com>, 2015
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-22 15:01+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
