po: update po/it_IT/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/contribute.po
+++ b/po/it_IT/contribute.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-21 08:08+0000\n"
+"PO-Revision-Date: 2016-07-22 06:47+0000\n"
 "Last-Translator: Angela Iussig <angela.iussig@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -4036,7 +4036,7 @@ msgstr "(Contributo ricorrente)"
 
 #: templates/CRM/Contribute/Form/SoftCredit.tpl
 msgid "Select an option to reveal honoree information fields."
-msgstr ""
+msgstr "Seleziona una opzione per compilare i dati "
 
 #: templates/CRM/Contribute/Form/SoftCredit.tpl
 msgid "another soft credit"
