po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -8,6 +8,7 @@
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
+# ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2014
 # oriolferran <oriol@creat.cat>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-19 22:33+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-25 15:51+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -439,15 +440,15 @@ msgstr "L'estat del participant seleccionat ha estat eliminat."
 msgid ""
 "Selected participant status has <strong>NOT</strong> been deleted; there are"
 " still participants with this status."
-msgstr "L'estat del participant seleccionat <strong>NOT</strong> ha estat esborrat; encara no hi ha participants amb aquest estatus.  "
+msgstr "L'estat de participant seleccionat <strong>NO</strong> ha estat eliminat; encara hi ha participants amb aquest estat.  "
 
 #: CRM/Admin/Form/ParticipantStatusType.php
 msgid "The Participant Status has been updated."
-msgstr "L'estatus del participant ha estat actualitzat. "
+msgstr "L'estat de participant ha estat actualitzat. "
 
 #: CRM/Admin/Form/ParticipantStatusType.php
 msgid "The new Participant Status has been saved."
-msgstr "El nou estatus del participant ha estat desat. "
+msgstr "El nou estat de participant ha estat desat. "
 
 #: CRM/Admin/Form/ParticipantStatusType.php
 msgid "The changes have not been saved."
@@ -1612,7 +1613,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Tag.php
 msgid "Selectable?"
-msgstr ""
+msgstr "Es pot seleccionar?"
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been deleted."
@@ -1725,13 +1726,13 @@ msgstr "Els usuaris deixaran de poder seleccionar aquest valor quan afegeixin o 
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this Participant Status?"
-msgstr "Esteu segur que voleu desactivar l'estatus del participant?"
+msgstr "Esteu segur que voleu desactivar aquest estat de participant?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
 "Users will no longer be able to select this value when adding or editing "
 "Participant Status."
-msgstr "Els usuaris ja no podran seleccionar aquest valor al afegir o editar el estatus del participant. "
+msgstr "Els usuaris ja no podran seleccionar aquest valor en afegir o editar l'estat de participant. "
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this component?"
@@ -1765,7 +1766,7 @@ msgstr "esteu segur que voleu desactivar aquest tipus de membres?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this membership status rule?"
-msgstr "Esteu segur que voleu desactivar aquesta regla d'estatus de membres?"
+msgstr "Esteu segurs que voleu desactivar aquesta regla d'estat de membre?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this price field?"
@@ -4287,7 +4288,7 @@ msgstr "Etiquetes reservades no poden ser eliminades. Els usuaris amb permís 'd
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Defines if you can select this tag."
-msgstr ""
+msgstr "Defineix si es pot seleccionar aquesta etiqueta."
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Are you sure you want to delete <b>%1</b> Tag?"
@@ -5561,40 +5562,40 @@ msgstr "Estats desactivats"
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.hlp
 msgid "Waitlisting Statuses"
-msgstr "Estatus de la llista d'espera "
+msgstr "Estats de llista d'espera "
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.hlp
 msgid ""
 "To enable event waitlist management the following statuses must be enabled:"
-msgstr "Per a activar la administració de la llista d'espera d'esdeveniments els següents estatus haurien estar habilitats: "
+msgstr "Per a activar l'administració de la llista d'espera d'esdeveniments els següents estats haurien d'estar habilitats: "
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.hlp
 msgid ""
 "Once these statuses are enabled, the event Info and Settings screen will "
 "have controls to enable (and configure) waitlisting."
-msgstr "Un cop que aquest estatus estiguin habilitats, les plantilles de informació i configuració de l'esdeveniment tindran controls per a habilitar (i configurar) les llistes d'espera."
+msgstr "Un cop que aquest estats estiguin habilitats, les plantilles d'informació i configuració de l'esdeveniment tindran controls per a habilitar (i configurar) les llistes d'espera."
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.hlp
 msgid "Approval Statuses"
-msgstr "Estatus d'aprovació "
+msgstr "Estats d'aprovació "
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.hlp
 msgid ""
 "To enable event participation approval the following statuses must be "
 "enabled:"
-msgstr "Per a permetre la aprovació de la participació en esdeveniments els següents estatus haurien d'estar activats:"
+msgstr "Per a permetre la aprovació de la participació en esdeveniments els següents estatss haurien d'estar activats:"
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.hlp
 msgid ""
 "Once these statuses are enabled, the event Online Registration screen will "
 "have controls to enable (and configure) participation approval."
-msgstr "Un cop que aquest estatus estiguin activats, la pantalla de registre en línia a l'esdeveniment tindrà controls per a permetre (i configurar) la aprovació de la participació. "
+msgstr "Un cop que aquests estats estiguin activats, la pantalla de registre en línia a l'esdeveniment tindrà controls per a permetre (i configurar) la aprovació de la participació. "
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.tpl
 msgid ""
 "Manage event participant statuses below. Enable selected statuses to allow "
 "event waitlisting and/or participant approval."
-msgstr "Administreu els estatus dels participants de l'esdeveniment a continuació. Activeu els estatus seleccionats per a permetre la aprovació de les llistes d'espera i/o dels participants a l'esdeveniment."
+msgstr "Administreu els estats dels participants de l'esdeveniment a continuació. Activeu els estats seleccionats per a permetre l'aprovació de les llistes d'espera i/o dels participants a l'esdeveniment."
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.tpl
 msgid "Name (Status ID)"
@@ -5602,7 +5603,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.tpl
 msgid "Add Participant Status"
-msgstr "Afegir estatus del participant"
+msgstr "Afegeix estats de participant"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Refer to the following documentation:"
