--- a/po/ca_ES/case.po
+++ b/po/ca_ES/case.po
@@ -6,13 +6,14 @@
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2014-2016
 # francescbassas <francesc@babu.cat>, 2013
+# ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-21 09:31+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-25 15:37+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -393,7 +394,7 @@ msgstr ""
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
-msgstr ""
+msgstr "Seleccioneu un contacte"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
@@ -401,7 +402,7 @@ msgstr "Reassigna el cas"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Please select a different contact."
-msgstr ""
+msgstr "Seleccioneu un contacte diferent."
 
 #: CRM/Case/Form/Report.php
 msgid "All Activities"
@@ -602,7 +603,7 @@ msgstr ""
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Case Resources"
-msgstr ""
+msgstr "Recursos del cas"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Max Instances"
@@ -922,7 +923,7 @@ msgstr "Afegir membres a %1"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "- select contacts -"
-msgstr "- selecciona el contacte -"
+msgstr "- seleccioneu contactes -"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "The group %1 has no members."
