po: update po/ca_ES/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-13 15:01+0000\n"
+"PO-Revision-Date: 2016-07-25 08:38+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -40,7 +40,7 @@ msgstr "Enquesta - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Status - %1"
-msgstr "Estatus de l'enquesta - %1"
+msgstr "Estat de l'enquesta - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Interviewer - %1"
