--- a/po/es_ES/member.po
+++ b/po/es_ES/member.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 11:09+0000\n"
+"PO-Revision-Date: 2016-07-25 16:21+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -156,7 +156,7 @@ msgstr "Sólo miembros relacionados"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Type(s)"
-msgstr "Tipo(s) de miembro(s)"
+msgstr "Tipo de miembro(s)"
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Member?"
