--- a/po/ca_ES/pcp.po
+++ b/po/ca_ES/pcp.po
@@ -5,13 +5,14 @@
 # Translators:
 # francescbassas <francesc@babu.cat>, 2014-2015
 # francescbassas <francesc@babu.cat>, 2013
-# Marti <m.prat@ixiam.com>, 2014
+# ixiam <info@ixiam.com>, 2016
+# Marti Prat <m.prat@ixiam.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-25 15:36+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -366,7 +367,7 @@ msgstr "Pàgina activada"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
-msgstr ""
+msgstr "Tipus de font"
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
@@ -377,7 +378,7 @@ msgstr ""
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid "Could not find source page id."
-msgstr "No s'ha pogut trobar l'identificador de la pàgina."
+msgstr "No s'ha pogut trobar la font de l'identificador de la pàgina."
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
