--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -8,13 +8,14 @@
 # francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
+# ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-09 08:58+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-25 16:22+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -113,15 +114,15 @@ msgstr "No s'ha enviat el rebut de la contribució"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contributions OR Soft Credits? - Soft Credits Only"
-msgstr ""
+msgstr "Contribucions o crèdits tous? - Només crèdits tous"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contributions OR Soft Credits? - Soft Credits with related Hard Credit"
-msgstr ""
+msgstr "Contribucions o crèdits tous? - Crèdits tous amb crèdit dur relacionat"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contributions OR Soft Credits? - Both"
-msgstr ""
+msgstr "Contribucions o crèdits tous? - Tots dos"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Only Display Test Contributions"
@@ -171,7 +172,7 @@ msgstr "Tipus de moneda"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Thank-you sent?"
-msgstr ""
+msgstr "Agraïment enviat?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Receipt sent?"
@@ -179,15 +180,15 @@ msgstr "Rebut enviat?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution is Pay Later?"
-msgstr ""
+msgstr "És una contribució amb pagament diferit?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution is Recurring?"
-msgstr ""
+msgstr "És una contribució periòdica?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution is a Test?"
-msgstr ""
+msgstr "És una contribució de prova?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Personal Campaign Page Honor Roll?"
@@ -199,7 +200,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contributions OR Soft Credits?"
-msgstr ""
+msgstr "Contribucions o crèdits tous?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Recurring Contribution Start Date"
@@ -684,7 +685,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Minimum Contribution Amount"
-msgstr "Import mínim de contribució"
+msgstr "Import mínim de la contribució"
 
 #: CRM/Contribute/Form/AdditionalInfo.php CRM/Contribute/Selector/Search.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -913,7 +914,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Select at least one option from Membership Type(s)."
-msgstr ""
+msgstr "Seleccioneu com a mínim una opció del tipus d'afiliació(ns)"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Select at least one option from Contribution(s)."
@@ -1053,7 +1054,7 @@ msgstr "Contribució amb Targeta de crèdit"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Additional Details"
-msgstr ""
+msgstr "Detalls addicionals"
 
 #: CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -1221,7 +1222,7 @@ msgstr "Enviar recordatori de pagament "
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Form/Search/Common.tpl
 msgid "Contribution Amounts"
-msgstr "Import de contribució "
+msgstr "Imports de la contribució "
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
@@ -4006,11 +4007,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Search/Common.tpl
 msgid "Contribution Dates"
-msgstr ""
+msgstr "Dates de la contribució"
 
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
 msgid "Next Scheduled"
-msgstr ""
+msgstr "Següent programada"
 
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
 msgid "Retry Date"
@@ -4039,7 +4040,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/SoftCredit.tpl
 msgid "another soft credit"
-msgstr ""
+msgstr "afegir un crèdit tou"
 
 #: templates/CRM/Contribute/Form/Task/Batch.tpl
 msgid ""
