--- a/po/ca_ES/member.po
+++ b/po/ca_ES/member.po
@@ -7,13 +7,14 @@
 # francescbassas <francesc@babu.cat>, 2015-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
+# ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-26 12:10+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-25 16:21+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -115,7 +116,7 @@ msgstr "Membre des de %2 %1"
 
 #: CRM/Member/BAO/Query.php
 msgid "Source %2 %1"
-msgstr "Origen %2 %1"
+msgstr "Font %2 %1"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is a Test"
@@ -147,7 +148,7 @@ msgstr "Només membres relacionats"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Type(s)"
-msgstr ""
+msgstr "Tipus d'afiliació(ns)"
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Member?"
@@ -437,7 +438,7 @@ msgstr ""
 
 #: CRM/Member/Form/Membership.php
 msgid "Please select a contact"
-msgstr ""
+msgstr "Seleccioneu un contacte"
 
 #: CRM/Member/Form/Membership.php
 msgid "Start date must be the same or later than Member since."
@@ -1167,21 +1168,21 @@ msgstr "Màxim nombre de pertinences relacionades (deixeu-ho en blanc per il·li
 msgid ""
 "Set the membership end date this many membership periods from now. Make sure"
 " the appropriate corresponding fee is entered below."
-msgstr ""
+msgstr "Establir com a data de finalització de l'afiliació aquest nombre de períodes des de la data actual. Assegurar-se d'assignar la cuota corresponent."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Source of this membership. This value is searchable."
-msgstr ""
+msgstr "Font de l'afiliació. Aquest camp és cercable"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "When did this contact first become a member?"
-msgstr ""
+msgstr "En quina data es va afiliar aquest contacte per primera vegada?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "First day of current continuous membership period. Start Date will be "
 "automatically set based on Membership Type if you don't select a date."
-msgstr ""
+msgstr "Primer dia del període actual de l'afiliciaó. Si no selecciona una data, aquesta s'establirà de forma automàtica en funció del tipus d'afiliació."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Over-ride end date"
@@ -1191,7 +1192,7 @@ msgstr ""
 msgid ""
 "Latest membership period expiration date. End Date will be automatically set"
 " based on Membership Type if you don't select a date."
-msgstr ""
+msgstr "Data de finalització del període d'afiliat. Si no es selecciona una data, aquesta s'establirà de forma automàtica segons el tipus d'afiliat."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -1212,7 +1213,7 @@ msgstr ""
 msgid ""
 "Check this box to enter or update payment information. You will also be able"
 " to generate a customized receipt."
-msgstr ""
+msgstr "Seleccionar aquesta casella per a gravar o actualitzar la informació de pagament. També es podrà generar un rebut personalitzat."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Membership Payment and Receipt"
