--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-07 07:39+0000\n"
-"Last-Translator: Romain Thouvenin <romain.thouvenin@gmail.com>\n"
+"PO-Revision-Date: 2016-07-25 15:54+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4019,7 +4019,7 @@ msgstr "ADVERTENCIA: Eliminar esta opción producirá la pérdida de todos los r
 
 #: templates/CRM/Contribute/Form/Search/Common.tpl
 msgid "Contribution Dates"
-msgstr "Fechas de Contribución"
+msgstr "Fechas de la contribución"
 
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
 msgid "Next Scheduled"
