--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -6,13 +6,14 @@
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
+# ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-13 15:15+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-25 16:07+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -98,7 +99,7 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Name"
-msgstr "Nom del contacte orígen"
+msgstr "Nom del contacte, font"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Contact Name"
@@ -114,7 +115,7 @@ msgstr "Límit per a l'usuari actual"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Email"
-msgstr "Correu de contacte Font"
+msgstr "Correu de contacte, font"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Contact Email"
@@ -1286,7 +1287,7 @@ msgstr "Data de Primera Contribució"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "First Contribution Amount"
-msgstr "Primer import de contribució"
+msgstr "Primer import de la contribució"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Recurring Contribution Id"
@@ -2056,7 +2057,7 @@ msgstr "Actualment no hi ha plantilles d'informes."
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Name"
-msgstr ""
+msgstr "Font del nom"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Name"
@@ -2068,7 +2069,7 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Email"
-msgstr ""
+msgstr "Font del correu electrònic"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Email"
@@ -2080,7 +2081,7 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Phone"
-msgstr ""
+msgstr "Font del telèfon"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Phone"
