--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -5,13 +5,14 @@
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2013-2016
+# ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-06-21 09:34+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-25 15:39+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1176,7 +1177,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source"
-msgstr "Orígen"
+msgstr "Font"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Where did this registration come from?"
@@ -1208,7 +1209,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Source Record Contact"
-msgstr ""
+msgstr "Font del registre de contacte de CiviCRM"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Fee Level"
@@ -1552,7 +1553,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source Contact"
-msgstr ""
+msgstr "Font del contacte"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who scheduled this activity"
@@ -1560,11 +1561,11 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Source Contact"
-msgstr ""
+msgstr "Font del contacte de CiviCRM"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source Record ID"
-msgstr ""
+msgstr "Font de l'identificador del registre"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who made this activity"
@@ -1808,7 +1809,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source of the relationship"
-msgstr ""
+msgstr "Font de la relació"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Status"
