--- a/po/fr_FR/case.po
+++ b/po/fr_FR/case.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
+# Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
 # elma dontovska <elmadont@gmail.com>, 2016
@@ -12,7 +12,9 @@
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# ShevAbam, 2016
 # tonthon <tonthon21@gmail.com>, 2011
+# Valerie Hartman <valeriehartman22@gmail.com>, 2016
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
 # Vincent <vincent.primault@gmail.com>, 2011
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
@@ -20,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-25 13:49+0000\n"
+"Last-Translator: Valerie Hartman <valeriehartman22@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -302,11 +304,11 @@ msgstr "Une copie de l'activité a aussi été envoyée aux contacts sélectionn
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "%1 enregistré"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "Avec Contact(s)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -398,7 +400,7 @@ msgstr "Dates de l'activité - à partir de"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
-msgstr ""
+msgstr "Activités Annulées"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
@@ -639,7 +641,7 @@ msgstr ""
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "En savoir plus..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
@@ -647,7 +649,7 @@ msgstr "Rôles"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Ajouter..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
@@ -672,11 +674,11 @@ msgstr ""
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Ajouter un rôle"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Référence"
 
 #: ang/crmCaseType.js
 msgid ""
