po: update po/fr_FR/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/event.po
+++ b/po/fr_FR/event.po
@@ -16,12 +16,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # reda <redasadki@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011, 2012
+# Valerie Hartman <valeriehartman22@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-22 12:34+0000\n"
-"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
+"PO-Revision-Date: 2016-07-25 18:55+0000\n"
+"Last-Translator: Valerie Hartman <valeriehartman22@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3653,7 +3654,7 @@ msgstr ""
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Complete?"
-msgstr ""
+msgstr "Complet ?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
@@ -3661,11 +3662,11 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
-msgstr ""
+msgstr "Rôle par défaut"
 
 #: CRM/Event/DAO/Event.php
 msgid "Maximum number of additional participants per registration"
-msgstr ""
+msgstr "Nombre maximum de participants en plus par régistration"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Self-service Cancellation or Transfer"
@@ -3681,7 +3682,7 @@ msgstr ""
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Maximum additional participants"
-msgstr ""
+msgstr "Participants maximum en plus"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Allow self-service cancellation or transfer?"
@@ -3863,7 +3864,7 @@ msgid ""
 " their registration OR transfer it to another participant. If this feature "
 "is enabled, event confirmation emails will include a link to a Cancel or "
 "Transfer form."
-msgstr ""
+msgstr "Selectionnez cette case si vous souhaitez de permettre aux participants enregistrés soit d'annuler leur enregistrement OU de transférer vers un autre participant. Si cette fonction est activée, les emails de confirmation seront inclus sous un lien de formulaire d'annulation ou de transfert. "
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
