po: update po/es_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/member.po
+++ b/po/es_ES/member.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 16:21+0000\n"
+"PO-Revision-Date: 2016-07-26 15:57+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -1491,7 +1491,7 @@ msgid ""
 "memberships, renewing will create a membership period commencing from the "
 "'Date Renewal Entered'. This date can be adjusted including being set to the"
 " day after the previous End Date - if continuous membership is required."
-msgstr "La renovación añadirá el período normal de membresía a la Fecha de Finalización del período anterior para los miembros cuyo estado sea Actual o Período de Gracia. Para las membresías vencidas, la renovación generará un período de membresía comenzando desde la 'Fecha de Renovación Ingresada'. Esta fecha puede ser ajustada, e incluso establecerse para el día posterior a la antigua Fecha de Finalización, si se requiere que la membresía sea continua."
+msgstr "El proceso de renovación de la membresía sumará a la fecha de finalización de los miembros con estado activo el tiempo que se haya configurado en el tipo de membresía. Para las membresías que ya hayan vencido, la renovación generará un nuevo período de membresía comenzando en la fecha en que se renueve. Esta fecha puede ser ajustada, incluso al día posterior a la antigua fecha de finalización, si se requiere que el periodo de la membresía sea contínuo."
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "change membership type"
