po: update po/pt_BR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Cristiane Lima <tiane.ash@uol.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012-2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012-2015
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
@@ -27,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-26 06:07+0000\n"
-"Last-Translator: Finks Costa <finkseletronica28@gmail.com>\n"
+"PO-Revision-Date: 2016-07-26 15:16+0000\n"
+"Last-Translator: Cristiane Lima <tiane.ash@uol.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1059,7 +1060,7 @@ msgstr "Papéis dos Destinatários"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
-msgstr ""
+msgstr "Manual dos Destinatários"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select appropriate value"
@@ -1067,7 +1068,7 @@ msgstr "Favor selecionar um valor apropriado"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Subject is a required field."
-msgstr ""
+msgstr "Assunto é campo obrigatório."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
@@ -1075,7 +1076,7 @@ msgstr "Favor selecione valor da entidade"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Absolute date cannot be earlier than the current time."
-msgstr ""
+msgstr "Data final não pode ser anterior a data atual."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid ""
@@ -1085,11 +1086,11 @@ msgstr "Se \"Também incluir\" ou \"Limite de\" são selecionados, você deve es
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
-msgstr ""
+msgstr "O lembrete selecionado foi excluído."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
-msgstr ""
+msgstr "Seu novo Lembrete entitulado %1 foi salvo."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
@@ -2002,7 +2003,7 @@ msgstr "Tem certeza de que deseja excluir esse mapeamento?"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
-msgstr ""
+msgstr "Esta operação não pode ser desfeita."
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Edit Mapping"
@@ -2194,148 +2195,148 @@ msgstr "Mesclar Rótulo"
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Summary"
-msgstr ""
+msgstr "Permissões: Resumo"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Details"
-msgstr ""
+msgstr "Permissões: Detalhes"
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "Propriedade"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
-msgstr ""
+msgstr "A aplicação \\\"%1\\\" solicita permissão para acessar seu sistema."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr ""
+msgstr "Tem certeza que deseja reconectar \\\"%1\\\"?"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
 "Reconnecting will change the connection details (such as callback URLs and "
 "permissions). This can be useful in a few cases, such as:"
-msgstr ""
+msgstr "Reconectar mudará os detalhes de conexão (tais como URLS de callback e permissões). Isto pode ser útil em alguns casos, como por exemplo:"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "Depois que seu site tenha migrado para uma nova URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "Depois que a aplicação tenha migrado para uma nova URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
-msgstr ""
+msgstr "Depois que a aplicação tenha mudado as permissões requeridas."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has a major failure or reset."
-msgstr ""
+msgstr "Depois que a aplicação tenha um defeito ou reinicie."
 
 #: ang/crmCxn/Connectivity.html
 msgid ""
 "There was a problem verifying that this site is available on the public "
 "Internet."
-msgstr ""
+msgstr "Houve um problema ao se verificar  se este site está disponível na internet pública."
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Veja também:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
-msgstr ""
+msgstr "Firewalls e Proxies"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Connections provide a simplified way to link your CiviCRM installation to an"
 " external service."
-msgstr ""
+msgstr "As conexões fornecem uma maneira simplificada de ligar sua instalação CiviCRM com o serviço externo."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "Conexões Existentes"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
-msgstr ""
+msgstr " %1: Sobre"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Settings (External)"
-msgstr ""
+msgstr "%1: Configurações (Externas):"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Logs (External)"
-msgstr ""
+msgstr "%1: Logs (Externos):"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
-msgstr ""
+msgstr "Logs"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
-msgstr ""
+msgstr "%1: Documentação (Externa)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
-msgstr ""
+msgstr "Documentação"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
-msgstr ""
+msgstr "%1: Suporte (Externo)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Support"
-msgstr ""
+msgstr "Suporte"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Reconnect"
-msgstr ""
+msgstr "%1: Reconectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
-msgstr ""
+msgstr "Reconectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
-msgstr ""
+msgstr "%1: Desconectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Are you sure you want to disconnect \"%1?\". Doing so may permanently "
 "destroy data linkage."
-msgstr ""
+msgstr "Tem certeza que deseja desconectar \"%1\"? Fazer isso pode destruir permanentemente os dados de ligação."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
-msgstr ""
+msgstr "Desconectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Novas Conexões"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
-msgstr ""
+msgstr "%1: Conectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
-msgstr ""
+msgstr "Conectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
-msgstr ""
+msgstr "Aplicações  indisponíveis"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Application List Unavailable"
-msgstr ""
+msgstr "Lista de Aplicação Indisponível"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Internet Access Required"
-msgstr ""
+msgstr "É necessário Acesso à Internet"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
