po: update po/ca_ES/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-07-25 15:39+0000\n"
+"PO-Revision-Date: 2016-07-27 12:05+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1985,7 +1985,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Complete?"
-msgstr ""
+msgstr "Completat?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is the mailing completely sent?"
