po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-26 14:17+0000\n"
+"PO-Revision-Date: 2016-07-27 12:16+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1850,12 +1850,12 @@ msgstr "Imatge eliminada"
 #: CRM/Contact/BAO/Contact.php CRM/Core/BAO/UFGroup.php CRM/UF/Form/Field.php
 #: CRM/UF/Page/Field.php templates/CRM/Contact/Form/Search/Criteria/Basic.tpl
 msgid "Group(s)"
-msgstr "Grups"
+msgstr "Grup(s)"
 
 #: CRM/Contact/BAO/Contact.php CRM/Core/BAO/UFGroup.php CRM/UF/Form/Field.php
 #: CRM/UF/Page/Field.php
 msgid "Tag(s)"
-msgstr "Etiquetes"
+msgstr "Etiqueta(es)"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Note(s)"
@@ -2109,7 +2109,7 @@ msgstr ""
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group(s) %1 %2"
-msgstr ""
+msgstr "Grup(s) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
@@ -3839,7 +3839,7 @@ msgstr "Modificat"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Target Contact"
-msgstr "Targeta de contacte"
+msgstr "Contacte de destí"
 
 #: CRM/Contact/Form/Search/Criteria.php templates/CRM/UF/Form/Field.hlp
 msgid "Active"
@@ -5021,7 +5021,7 @@ msgstr "<b>%1</b> arxiu(s) del directori %2 no es pot escriure. L'arxiu(s) indic
 #: CRM/Contact/Import/Form/DataSource.php
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid "Data Source"
-msgstr "Orígen de les dades"
+msgstr "Font de les dades"
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "No Duplicate Checking"
@@ -8459,7 +8459,7 @@ msgstr "Netejats tots els caches de CiviCRM (base de dades, menú, plantilles)"
 #: CRM/Core/Invoke.php CRM/Core/Page/File.php CRM/Core/SelectValues.php
 #: CRM/Utils/System.php
 msgid "Complete"
-msgstr "Complet"
+msgstr "Complert"
 
 #: CRM/Core/Invoke.php
 msgid "Bad menu record in database"
@@ -13811,7 +13811,7 @@ msgstr "Adjunts"
 
 #: templates/CRM/Activity/Form/Search/Common.tpl
 msgid "Has a Followup Activity?"
-msgstr ""
+msgstr "Té una activitat de seguiment?"
 
 #: templates/CRM/Activity/Form/Search/Common.tpl
 msgid "Is a Followup Activity?"
@@ -21443,7 +21443,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Household Name and State"
-msgstr "Nom i estat de la llar"
+msgstr "Nom i província de la llar"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Contribution Aggregate"
@@ -21459,7 +21459,7 @@ msgstr "Enviaments de correu postal"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Event Aggregate"
-msgstr "esdeveniment afegit"
+msgstr "Esdeveniment afegit"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Search"
@@ -24766,7 +24766,7 @@ msgstr ""
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity Type(s)"
-msgstr "Tipus d'activitats"
+msgstr "Tipus d'activitat(s)"
 
 #: CRM/Activity/Form/Task/Batch.php CRM/Activity/Form/Task/PickProfile.php
 #: CRM/Activity/Task.php
